	example.

	* src/staticGen.cpp: Use topology constant name instead of plain
	number.

	* include/Makefile.am: Adapt Makefile.am to new organization of
	header files.

	* include/dyndmcs/Makefile.am: New file.
	* include/generator/Makefile.cam: Likewise.
	* include/parser/Makefile.am: Likewise.
	* include/network/Makefile.am: Likewise.
	* include/loopformula/Makefile.am: Likewise.

	* include/CommandTypeFactory.h: Adapt including header files.
	* include/network/Handler.h: Likewise.
	* include/network/Server.h: Likewise.
	* include/ClaspProcess.h: Likewise.
	* include/CommandType.h: Likewise.
	* include/SatSolver.tcc: Likewise.
	* include/Message.h: Likewise.
	* src/ClaspResultOnlineParser.cpp: Likewise.
	* src/DynamicConfiguration.cpp: Likewise.
	* src/Instantiator.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/Server.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/CNFLocalLoopFormulaBuilder.cpp: Likewise.
	* src/IMPLocalLoopFormulaBuilder.cpp: Likewise.
	* src/LocalLoopFormulaBuilder.cpp: Likewise.
	* src/tests/testClasp.cpp: Likewise.
	* src/tests/testParser.cpp: Likewise.
	* src/tests/testResult.cpp: Likewise.
	* src/tests/testTranslation.cpp: Likewise.

	* include/loopformula: New sub dir.
	* include/CNFLocalLoopFormulaBuilder.h: Move to
	include/loopformula.
	* include/EquiCNFLocalLoopFormulaBuilder.h: Likewise.
	* include/IMPLocalLoopFormulaBuilder.h: Likewise.
	* include/LocalLoopFormulaBuilder.h: Likewise.
	* include/LoopFormula.h: Likewise.
	* include/LoopFormulaBuidler.h: Likewise.
	* include/LoopFormulaDirector.h: Likewise.

	* include/parser: New subdir.
	* include/BRGrammar.h: Move to include/parser.
	* include/BRGGrammar.tcc: Likewise.
	* include/BaseBuilder.h: Likewise.
	* include/BridgeRulesBuilder.h: Likewise.
	* include/BridgeRulesBuilder.tcc: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.