@@ -1,19 +1,9 @@
 AUTOMAKE_OPTIONS = gnu
 
-SUBDIRS = dyndmcs generator loopformula network parser
+SUBDIRS = dmcs dyndmcs generator loopformula network parser
 
 # including headers for make dist
 noinst_HEADERS =  \
-	  	ProgramOptions.h
-		Signature.h \
-	  	CNFLocalLoopFormulaBuilder.h \
-	  	IMPLocalLoopFormulaBuilder.h \
-	  	EquiCNFLocalLoopFormulaBuilder.h \
-		LocalLoopFormulaBuilder.h \
-		LoopFormula.h \
-		LoopFormulaBuilder.h \
-	 	LoopFormulaDirector.h \
-		BaseDMCS.h \
 		BaseSolver.h \
 		BaseVisitor.h \
 		BeliefCombination.h \
@@ -24,20 +14,15 @@ noinst_HEADERS =  \
 		CommandTypeFactory.h \
 		Context.h \
                 ContextGenerator.h \
-                DiamondQPGenerator.h \
                 DLVVisitor.h \
 		Match.h \
 		DimacsVisitor.h \
 		LogicVisitor.h \
-		OptMessage.h \
-		OptCommandType.h \
 		Message.h \
 		Neighbor.h \
-		PrimitiveDMCS.h \
-		PrimitiveMessage.h \
-		PrimitiveCommandType.h \
 		Process.h \
 		ProcessBuf.h \
+	  	ProgramOptions.h \
 		ProxySignatureByLocal.h \
                 QueryPlanWriter.h \
                 QueryPlan.h \
