@@ -1,0 +1,14 @@
+AUTOMAKE_OPTIONS = gnu
+
+# including headers for make dist
+noinst_HEADERS =  \
+		BaseDMCS.h \
+		OptCommandType.h \
+		OptDMCS.h \
+		OptMessage.h \
+		PrimitiveCommandType.h \
+		PrimitiveDMCS.h \
+		PrimitiveMessage.h 
+
+
+
