@@ -18,7 +18,7 @@
  */
 
 /**
- * @file   PrimitiveDMCS.h
+ * @file   OptDMCS.h
  * @author Thomas Krennwallner <tkren@kr.tuwien.ac.at>
  * @date   Wed Nov  4 11:14:01 2009
  * 
@@ -27,24 +27,24 @@
  * 
  */
 
-#ifndef PRIMITIVE_DMCS_H
-#define PRIMITIVE_DMCS_H
+#ifndef OPT_DMCS_H
+#define OPT_DMCS_H
 
 #include <boost/shared_ptr.hpp>
 
-#include "BaseDMCS.h"
-#include "PrimitiveMessage.h"
+#include "dmcs/BaseDMCS.h"
+#include "dmcs/OptMessage.h"
 #include "ReturnMessage.h"
 #include "Cache.h"
 #include "Theory.h"
-
+#include "QueryPlan.h"
 
 namespace dmcs {
 
-
-class PrimitiveDMCS : public BaseDMCS
+class OptDMCS : public BaseDMCS
 {
 public:
+
 #if defined(DMCS_STATS_INFO)
   typedef ReturnMessage      dmcs_value_type;
   typedef ReturnMessagePtr   dmcs_return_type;
@@ -53,13 +53,13 @@ public:
   typedef BeliefStateListPtr dmcs_return_type;
 #endif
 
-  PrimitiveDMCS(const ContextPtr& c, const TheoryPtr& t, const SignatureVecPtr& s);
+  OptDMCS(const ContextPtr& c, const TheoryPtr& t, const SignatureVecPtr& s, const QueryPlanPtr& query_plan_);
 
   virtual
-  ~PrimitiveDMCS();
+  ~OptDMCS();
 
   dmcs_return_type
-  getBeliefStates(PrimitiveMessage& mess);
+  getBeliefStates(const OptMessage& mess);
 
 protected:
 
@@ -67,16 +67,17 @@ protected:
   createGuessingSignature(const BeliefStatePtr& V, const SignaturePtr& my_sig);
 
 private:
+  QueryPlanPtr query_plan;
   CacheStatsPtr cacheStats;
   CachePtr cache;
 };
 
-typedef boost::shared_ptr<PrimitiveDMCS> PrimitiveDMCSPtr;
+typedef boost::shared_ptr<OptDMCS> OptDMCSPtr;
 
 } // namespace dmcs
 
 
-#endif // PRIMITIVE_DMCS_H
+#endif // OPT_DMCS_H
 
 // Local Variables:
 // mode: C++
