@@ -49,10 +49,6 @@
 #include "Message.h"
 #include "DimacsVisitor.h"
 #include "Signature.h"
-#include "PrimitiveDMCS.h"
-#include "OptDMCS.h"
-#include "OptCommandType.h"
-#include "PrimitiveCommandType.h"
 #include "ProgramOptions.h"
 #include "Neighbor.h"
 #include "CommandTypeFactory.h"
